--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -16,3 +16,5 @@ sql:
         package: "db"
         emit_json_tags: true
         out: "sqlc"
+        emit_empty_slices: true
+        emit_interface: true
